--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <html>
   <head>
-    <tittle>Version 1</tittle>
+    <title>Version 1</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
