--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
           event-set__mouseleave="scale: 1 1 1; color: white"
           class="clickable"
           onclick="window.location.href='https://www.instagram.com/nats.realm/'">
+              </a-plane>
       </a-entity>
     </a-scene>
   </body>
