--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a-plane src="./Póster riot (1).jpg" position="0 0 0" height="0.297" width="0.210" rotation="0 0 0"></a-plane>
 
           <a-plane 
-          src="#card" 
+          src="./Póster riot (1).jpg" 
           position="0 0 0" 
           height="0.297" 
           width="0.210" 
